.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Pack__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sourcing - Screening</fullName>
            </value>
            <value>
                <fullName>Sourcing - Onboarding</fullName>
            </value>
            <value>
                <fullName>Sourcing - Contracting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>