.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Pack__c/fields/of_Documents__c.field-meta.xml
<CustomField>
    <fullName>of_Documents__c</fullName>
    <description>The number of Documents in this Document Pack.</description>
    <inlineHelpText>The number of Documents in this Document Pack.</inlineHelpText>
    <label># of Documents</label>
    <summaryForeignKey>b3o__Document__c.b3o__Document_Pack__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>