.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document_Pack__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( b3o__Disabled__c = TRUE, &quot;Deprecated&quot;, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>